# bidivec

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: adventofcode2021_day11.rs  adventofcode2021_day15.rs  adventofcode2021_day9.rs  benchmark.rs  maze.rs  maze_whole.rs
src/: error.rs  lib.rs  macros.rs
src/algorithms/: editing.rs  mod.rs  pathfinding.rs
src/areas/: bidirect.rs  bidirect_signed.rs  mod.rs  neighbours.rs
src/bidiiter/: borderstate.rs  mod.rs  rectstate.rs
src/bidiiter/immutable/: border.rs  iter.rs  precalc.rs  rect.rs
src/bidiiter/immutable_xy/: border.rs  iter.rs  mod.rs  precalc.rs  rect.rs
src/bidiiter/mutable/: border.rs  iter.rs  precalc.rs  rect.rs
src/bidiiter/mutable_xy/: border.rs  iter.rs  precalc.rs  rect.rs
src/bidiview/: mod.rs  traits.rs  transforming.rs
src/collections/: bidiarray.rs  bidigrowvec.rs  bidimutslice.rs  bidislice.rs  bidivec.rs  mod.rs
src/tests/: bidiarray_tests.rs  bidigrowvec_tests.rs  bidimutslice_tests.rs  bidislice_tests.rs  bidivec_tests.rs  conversions.rs  copies.rs  mod.rs  test_types.rs
